move to PUT endpoint to set feedback status
